# things_done

./: package-lock.json  package.json
src/: App.tsx  backup_styles.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/Tasks/: Task.tsx  TaskList.tsx  TasksContext.tsx  tasksIo.tsx
src/components/AddTask/: AddTask.tsx  addtask.css
src/components/DndList/: DndList.tsx  StrictModeDroppable.tsx
src/components/DndTasksList/: DndTasksList.tsx  dndtaskslist.css
src/components/Footer/: Footer.tsx  footer.css
src/components/MainTasks/: MainTasks.tsx  maintasks.css
src/components/Task/: Task.tsx  task.css
src/components/TaskComponent/: TaksComponent.tsx  taskcomponent.css
src/components/TaskList/: TaskList.tsx  tasklist.css
src/components/TasksList/: TasksList.tsx  taskslist.css
src/components/Titlebar/: Titlebar.tsx  titlebar.css
src/components/Tree/: SortableTree.tsx
src/components/Tree/components/TreeItem/: SortableTreeItem.tsx  TreeItem.module.css  TreeItem.tsx
src/io/: dataIo.tsx  fetchTasksPath.tsx  fetchThingsPath.tsx  readJsonFile.tsx  writeJsonFile.tsx
src/style/: titlebar.css
